changed to file upload

--- a/static/styles.css
+++ b/static/styles.css
@@ -5,6 +5,7 @@
   width: 70%; /* Full-width */
   font-size: 16px; /* Increase font-size */
   padding: 12px 20px 12px 40px; /* Add some padding */
+  border-radius: 10px;
   border: 1px solid #ddd; /* Add a grey border */
   margin-bottom: 12px; /* Add some space below the input */
 }
@@ -13,25 +14,20 @@
   border-collapse: collapse; /* Collapse borders */
   width: 100%; /* Full-width */
   border: 1px solid #ddd; /* Add a grey border */
-  font-size: 18px; /* Increase font-size */
+  font-size: 15px; /* Increase font-size */
 }
 
 #tblFindings th, #tblFindings td {
   text-align: left; /* Left-align text */
-  padding: 12px; /* Add padding */
+  padding: 3px; /* Add padding */
 }
 
-#tblFindings tr {
-  /* Add a bottom border to all table rows */
-  border-bottom: 1px solid #ddd;
-}
-
-#tblFindings tr.header, #tblFindings tr:hover {
-  /* Add a grey background color to the table header and on hover */
-  background-color: #f1f1f1;
-}
 
 .navbtn{
-  width: 140px;
+  width: 100px;
   margin: 5px;
 }
+.table-striped>tbody>tr:nth-child(odd)>td,
+.table-striped>tbody>tr:nth-child(odd)>th {
+   background-color: aliceblue;
+ }
