--- a/templates/base.html
+++ b/templates/base.html
@@ -20,15 +20,15 @@
 <body class="container-fluid" style="margin:5px;">
 <div class="row">
     <div class="col-sm-1">
-        <div class=" text-center" style="border:1px solid lightblue; padding:3px;">
-            <img src="{{ url_for('static',filename='sas-logo-sas-blue.png') }}" alt="logo" height="70">
+        <div>
+            <img src="{{ url_for('static',filename='sas-logo-sas-blue.png') }}" alt="logo" height="50">
             <h5 class="text-primary">Log Reviewer</h5>
         </div>
         <div>
             <a href="/" class=" btn-sm btn btn-outline-primary navbtn"><i class="fa fa-home"
                                                                        style="float:left;"></i>Home</a>
             <a href="/info" class="btn-sm btn btn-outline-primary navbtn"><i class="fa fa-info-circle"
-                                                                       style="float:left;"></i>Info</a>
+                                                                       style="float:left;"></i>Guide</a>
         </div>
 
     </div>
