removed mailto link

--- a/templates/info.html
+++ b/templates/info.html
@@ -33,8 +33,7 @@
                 <label>Author</label>
             </div>
             <div class="col-sm-8">
-                <label>Shawn Hopkins <a href="mailto:shawn.hopkins@pfizer.com"><i
-                        class="fa fa-envelope"></i></a></label>
+                <label>Shawn Hopkins</label>
             </div>
         </div>
         <div class="row">
