removed mailto link

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <div>
             <a href="/" class=" btn-sm btn btn-outline-primary navbtn"><i class="fa fa-home"
                                                                        style="float:left;"></i>Home</a>
-            <a href="/info" class="btn-sm btn btn-outline-primary navbtn"><i class="fa fa-info-circle"
+            <a href="/guide" class="btn-sm btn btn-outline-primary navbtn"><i class="fa fa-info-circle"
                                                                        style="float:left;"></i>Guide</a>
         </div>
 
