--- a/templates/user_guide.html
+++ b/templates/user_guide.html
@@ -33,7 +33,8 @@
                 <label>Author</label>
             </div>
             <div class="col-sm-8">
-                <label>Shawn Hopkins</label>
+                <label>Shawn Hopkins <a href="mailto:shawn.hopkins@pfizer.com"><i
+                        class="fa fa-envelope"></i></a></label>
             </div>
         </div>
         <div class="row">
@@ -42,6 +43,14 @@
             </div>
             <div class="col-sm-8">
                 <label>Temporary solution for summarizing SAS log using RegEx patterns</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-1">
+                <label>Source</label>
+            </div>
+            <div class="col-sm-8">
+                <label><a href="https://github.com/shopkins-seagen/sas_log_reviewer" target="_blank">GitHub</a></label>
             </div>
         </div>
         <div class="row">
