moved instructions to home page

--- a/templates/review.html
+++ b/templates/review.html
@@ -20,4 +20,13 @@
             <button class="btn btn-outline-primary" onclick="return enabledReview(document.getElementById('file'))" type="submit"><i style='margin-right:3px;' class="fa fa-running"></i>Review Log</button>
         </div>
     </form>
+            <hr/>
+            <h5 class="text-primary">Using the Log Reviewer</h5>
+        <ol>
+            <li>For Sigma logs, in Studio, navigate to the logs folder for the appropriate artifact and state</li>
+            <li>Right-click on the SAS log file and select Download</li>
+            <li>Select the file in the drop down on the home page of the Log Review app and click Review</li>
+            <li>Filter by Issue Type in the dropdown or type in the 'Filter Log Line' box to filter by log line text</li>
+        </ol>
+
 {% endblock %}
